# service/api/api-handler.go
@@ -22,6 +22,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/stream", rt.getStream)
 	rt.router.PUT("/comments/:postid", rt.commentPost)
 	rt.router.DELETE("/comments/:commentid", rt.unCommentPost)
+	rt.router.GET("/comments/:postid", rt.getComments)
 
 	rt.router.POST("/sqlexec", rt.executeSQL)
 
